--- a/priv/admin/js/templates/partition.hbs
+++ b/priv/admin/js/templates/partition.hbs
@@ -1,9 +1,11 @@
 {{#with view}}
-  <div>
+  <div class="partition">
+    <!--
     {{content}}
     {{n_val}}
     {{available}}
     {{quorum}}
     {{index}}
+    -->
   </div>
 {{/with}}
