--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -11,5 +11,8 @@
     <div class="clear"></div>
   </section>
 
-  {{collection RiakControl.PartitionsView contentBinding="content"}}
+  <section id="partition-container">
+    {{collection RiakControl.PartitionsView contentBinding="content"}}
+    <div class="clear"></div>
+  </section>
 </div>
