--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -7,6 +7,49 @@ CSS to be applied ONLY on the snapshot page
 
 #ring-page
 
+  .clear
+    clear : both
+
+  #partition-container
+    margin    : 25px auto
+    max-width : 696px
+
+  .partition
+    css-transition(background-color .3s ease, border-color .3s ease)
+    dimensions(14px, 14px)
+    corners(2px)
+    background : #626262
+    display    : block
+    float      : left
+    margin     : 3px
+    border     : 2px solid rgba(0, 0, 0, .78)
+
+    &.gray
+      radialGradient(#626262, #555555)
+
+    &.orange
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(255, 183, 101, 1), rgba(255, 183, 101, 0))
+      vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+      border-color     : #36280e
+      background-color : #feac4f
+
+    &.red
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(246, 93, 93, 1), rgba(246, 93, 93, 0))
+      vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+      border-color     : #2b0c0c
+      background-color : #ea5050
+
+    &.blue
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(59, 170, 255, 1), rgba(59, 170, 255, 0))
+      vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+      border-color     : #071a20
+      background-color : #299ce5
+
+
+/*
   #no-details
     text-align : center
     margin     : 25px auto
@@ -219,4 +262,4 @@ CSS to be applied ONLY on the snapshot page
     #summary-info
       .item-2
         width : 22%
-
+*/
