Start wiring up templates.

--- a/priv/admin/js/templates/partition.hbs
+++ b/priv/admin/js/templates/partition.hbs
@@ -1,11 +1,3 @@
 {{#with view}}
-  <div class="partition">
-    <!--
-    {{content}}
-    {{n_val}}
-    {{available}}
-    {{quorum}}
-    {{index}}
-    -->
-  </div>
+  <div {{bindAttr class="color"}}></div>
 {{/with}}
