--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -48,6 +48,13 @@ CSS to be applied ONLY on the snapshot page
       border-color     : #071a20
       background-color : #299ce5
 
+    &.green
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(132, 255, 126, 1), rgba(132, 255, 126, 0))
+      vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+      border-color     : #071a03
+      background-color : #6ce157
+
 
 /*
   #no-details
