--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -5,6 +5,295 @@ CSS to be applied ONLY on the snapshot page
 
 @import reusable
 
+
+/*
+ * Keyframes for green pulsing effect.
+ */
+@-webkit-keyframes pulseGreen {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+    background-color: #6ce157
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+}
+@-moz-keyframes pulseGreen {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+    background-color: #6ce157
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+}
+@-o-keyframes pulseGreen {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+    background-color: #6ce157
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+}
+@keyframes pulseGreen {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+    background-color: #6ce157
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .1))
+    background-color: #555555
+  }
+}
+
+/*
+ * Keyframes for red pulsing effect.
+ */
+@-webkit-keyframes pulseRed {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+    background-color: #ea5050
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+}
+@-moz-keyframes pulseRed {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+    background-color: #ea5050
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+}
+@-o-keyframes pulseRed {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+    background-color: #ea5050
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+}
+@keyframes pulseRed {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+    background-color: #ea5050
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .1))
+    background-color: #555555
+  }
+}
+
+/*
+ * Keyframes for blue pulsing effect.
+ */
+@-webkit-keyframes pulseBlue {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+    background-color: #299ce5
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+}
+@-moz-keyframes pulseBlue {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+    background-color: #299ce5
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+}
+@-o-keyframes pulseBlue {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+    background-color: #299ce5
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+}
+@keyframes pulseBlue {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+    background-color: #299ce5
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .1))
+    background-color: #555555
+  }
+}
+
+/*
+ * Keyframes for orange pulsing effect.
+ */
+@-webkit-keyframes pulseOrange {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+    background-color: #feac4f
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+}
+@-moz-keyframes pulseOrange {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+    background-color: #feac4f
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+}
+@-o-keyframes pulseOrange {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+    background-color: #feac4f
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+}
+@keyframes pulseOrange {
+  0%   {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+  50%  {
+    opaque(1)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+    background-color: #feac4f
+  }
+  100% {
+    opaque(.8)
+    vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .1))
+    background-color: #555555
+  }
+}
+
 #ring-page
 
   .clear
@@ -34,12 +323,18 @@ CSS to be applied ONLY on the snapshot page
       border-color     : #36280e
       background-color : #feac4f
 
+      &.pulse
+        vendor('animation', pulseOrange 1s infinite)
+
     &.red
       css-transition(background-color .3s ease, border-color .3s ease)
       radialGradient(rgba(246, 93, 93, 1), rgba(246, 93, 93, 0))
       vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
       border-color     : #2b0c0c
       background-color : #ea5050
+
+      &.pulse
+        vendor('animation', pulseRed 1s infinite)
 
     &.blue
       css-transition(background-color .3s ease, border-color .3s ease)
@@ -48,12 +343,18 @@ CSS to be applied ONLY on the snapshot page
       border-color     : #071a20
       background-color : #299ce5
 
+      &.pulse
+        vendor('animation', pulseBlue 1s infinite)
+
     &.green
       css-transition(background-color .3s ease, border-color .3s ease)
       radialGradient(rgba(132, 255, 126, 1), rgba(132, 255, 126, 0))
       vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
       border-color     : #071a03
       background-color : #6ce157
+
+      &.pulse
+        vendor('animation', pulseGreen 1s infinite)
 
 
 /*
