--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -5,6 +5,16 @@ CSS to be applied ONLY on the snapshot page
 
 @import reusable
 
+#ring-page
+
+  #current-ring
+    max-width   : 850px
+    margin      : 0 auto 45px auto
+    padding-top : 40px
+ 
+    & > span.gui-text-flat
+      line-height : 1.5
+      display     : block
 
 /*
  * Keyframes for green pulsing effect.
