--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -13,7 +13,8 @@
 
   <div id="current-ring">
     <h2 class="gui-headline">Current Ring</h2>
-    <span class="gui-text-flat italic">Here lies the ring.</span><br/>
+    <span class="gui-text-flat italic">Overview of the hash-space and
+      availability of data stored in the cluster.</span><br/>
     <section id="partition-container">
       {{collection RiakControl.PartitionsView contentBinding="content"}}
       <div class="clear"></div>
